RESOLVED FIXED27287
[V8] Fix isolated world constructors
https://bugs.webkit.org/show_bug.cgi?id=27287
Summary [V8] Fix isolated world constructors
Adam Barth
Reported 2009-07-14 19:56:10 PDT
Currently the isolated world constructors are a bit confused. The V8Proxy was entering m_context before creating the constructors, effectively moving the constructors to the main m_context world. We need to use our new getWrapperContext helps instead. Patch forthcoming.
Attachments
patch (15.89 KB, patch)
2009-07-14 19:58 PDT, Adam Barth
dglazkov: review+
Adam Barth
Comment 1 2009-07-14 19:58:36 PDT
Adam Barth
Comment 2 2009-07-14 19:59:13 PDT
This is the last patch to make my test suite pass. Once we land this patch, I'll enable the feature downstream and we can land the tests. Hooray!
Dimitri Glazkov (Google)
Comment 3 2009-07-15 10:20:26 PDT
Comment on attachment 32762 [details] patch Excellent!
Adam Barth
Comment 4 2009-07-15 11:14:48 PDT
Sending WebCore/ChangeLog Sending WebCore/bindings/scripts/CodeGeneratorV8.pm Sending WebCore/bindings/v8/V8DOMWrapper.cpp Sending WebCore/bindings/v8/V8DOMWrapper.h Sending WebCore/bindings/v8/V8IsolatedWorld.cpp Sending WebCore/bindings/v8/V8Proxy.cpp Sending WebCore/bindings/v8/V8Proxy.h Transmitting file data ....... Committed revision 45928. http://trac.webkit.org/changeset/45928
Note You need to log in before you can comment on or make changes to this bug.